# docs/swagger.json
@@ -16,6 +16,34 @@
     "host": "localhost:5000",
     "basePath": "/",
     "paths": {
+        "/apikey": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Returns the current API key",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "API Key"
+                ],
+                "summary": "Check API key",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/name": {
             "get": {
                 "description": "Returns the name of the server",
@@ -641,7 +669,7 @@
         "Bearer": {
             "type": "apiKey",
             "name": "Authorization",
-            "in": "header"
+            "in": "Bearer"
         }
     }
 }
